fix icon spacing

--- a/src/js/App/Header/Header.scss
+++ b/src/js/App/Header/Header.scss
@@ -36,6 +36,5 @@
 }
 
 .visible-pointer {
-  margin-left: 5px;
   pointer-events: auto;
 }
